2006-08-14  Mark Wielaard  <mark@klomp.org>

	* Makefile.am (ftk.jar): Add all classes to jar.
	* src/java/com/redhat/ftk/EventViewer.java (getSelectedTraces):
	Returns long[].
	(ftk_eventviewer_get_selected_traces): Likewise.
	* src/jni/com_redhat_ftk_EventViewer.c
	(Java_com_redhat_ftk_EventViewer_ftk_1eventviewer_1get_1selected_1traces):
	Returns jlongArray.
	* src/widgets/ftkeventviewer.c (ftk_eventviewer_get_selected_traces):
	Uses longs.

2006-08-11  Nurdin Premji  <npremji@redhat.com>

	* src/java/com/redhat/ftk/EventViewer.java (getSelectedTraces): Ditto.
	* src/jni/com_redhat_ftk_EventViewer.c (ftk_ev_get_selected_traces): Added code to return selected traces to java.
	* src/widgets/ftkeventviewer.c: Created code to treat traces as official GObjects.
	Added code to make traces selectable/highlightable.
	Added code to return selected traces to java.
	* src/widgets/ftkeventviewer.h: Added code to treat traces as official GObjects.

2006-08-03  Nurdin Premji  <npremji@redhat.com>

	* src/widgets/ftkeventviewer.c: Changed all ints to gints.
	* src/widgets/ftkeventviewer.h: Ditto.

	* src/widgets/ftkeventviewer.c: Added accessibility support for traces.
	* src/widgets/ftkeventviewer.h: Ditto. 

2006-08-01	Nurdin Premji	<npremji@redhat.com>
	
	* src/widgets/ftkeventviewer.c (ftk_eventviewer_accessible_get_n_children)
	Added back missing accessibility for legend area, drawing area, and main scrollbar.
	(ftk_eventviewer_accessible_find_child): Ditto.

2006-07-31  Nurdin Premji  <npremji@redhat.com>

	* src/widgets/ftkeventviewer.h (ftk_marker_index): Added for accessibility.
	(ftk_marker_s): Added index for accessibility.
	* src/widgets/ftkeventviewer.c (ftk_eventviewer_style): Cleaned out commented code.
	(ftk_eventviewer_class_init): Added accessibility stuff.
	(ftk_eventviewer_set_marker_rgb_e): Also expose the legend area as well as drawing area.
	Added accessibility methods, dogtail should now be able to detect observer/markers.
